load("@io_bazel_rules_go//go:def.bzl", "go_library", "gazelle")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/trystanj/proto",
)

proto_library(
    name = "sample_proto",
    srcs = [
      "sample.proto",
      ],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "sample_go_proto",
    proto = ":sample_proto",
    importpath = "github.com/trystanj/proto",
    deps = [
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
