load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "sample_proto",
    srcs = [
      "sample.proto",
      ],
    deps = [],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "sample_go_proto",
    proto = ":sample_proto",
    importpath = "github.com/trystanj/proto",
    deps = [],
    visibility = ["//visibility:public"],
)
