load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "group_proto",
    srcs = [
      "outer.proto",
      "inner.proto",
      "nested1.proto",
      "nested2.proto",
      ],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "group_go_proto",
    proto = ":group_proto",
    importpath = "github.com/trystanj/proto/group",
    deps = [
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
